--- a/client/app/shared/styles/variables.scss
+++ b/client/app/shared/styles/variables.scss
@@ -30,6 +30,7 @@ $blueDefault: #1893d6;
 $lightGrey: #808080;
 $linkColor: #1f73b9;
 $light-red: #e02c00;
+$spacer-x: 24px;
 
 
 $heightScreen:calc(100vh - #{$heightToolbar});
